微博关注 js 地址修改

--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@ fetch('https://lab.magiconch.com/api/hosts/unicom-host').then(r=>r.json()).then(
 </marquee>
 
 
-快来关注我！！-----v<iframe src="http://widget.weibo.com/relationship/followbutton.php?btn=red&amp;style=4&amp;uid=5111733553&amp;width=100%&amp;height=64&amp;language=zh_tw" width="100%" height="64" frameborder="0" scrolling="no" marginheight="0"></iframe>
+快来关注我！！-----v<iframe src="https://widget.weibo.com/relationship/followbutton.php?btn=red&amp;style=4&amp;uid=5111733553&amp;width=100%&amp;height=64&amp;language=zh_tw" width="100%" height="64" frameborder="0" scrolling="no" marginheight="0"></iframe>
 ^----快来关注我！！！
 
 <!-- <a href="https://itunes.apple.com/cn/app/zheng-xu/id1157594484?mt=8" target="_blank" style="position:absolute;top:540px;right:320px;width:240px;"><img src="images/a15b4afegw1f87dx4i0yeg206u02lagr.jpg" style="width:180px;height:60px;"><big>魔蛤</big>-表情包 <small>开发商：EyreFree</small>
@@ -1444,7 +1444,7 @@ ul.ds-comments{
 
 
 
-<div class="ds-share flat" data-title="这是一个超棒的前端页面" data-images="images/a15b4afegw1eoqb7s9uegg2064064q9l.jpg" data-content="没见过比这还棒的前端演示了！" data-url="http://sojo.im">
+<div class="ds-share flat" data-title="这是一个超棒的前端页面" data-images="images/a15b4afegw1eoqb7s9uegg2064064q9l.jpg" data-content="没见过比这还棒的前端演示了！" data-url="https://sojo.im">
     <div class="ds-share-inline">
       <ul  class="ds-share-icons-32">
       	
@@ -1480,7 +1480,7 @@ u2b.currentTime=1.9
 u2b.play()}
 u2bloop.onclick=u2b.onended
 </script>
-<div style="position:absolute;top:200px;right:300px;pointer-events:none"><script src="http://count.2881.com/count/count.asp?id=59061&sx=1&ys=32"></script></div>
+<!-- <div style="position:absolute;top:200px;right:300px;pointer-events:none"><script src="https://count.2881.com/count/count.asp?id=59061&sx=1&ys=32"></script></div> -->
 <h1>王守义与哈士奇<img src="images/a15b4afegw1eoqb7s9uegg2064064q9l.jpg"></h1>
 
 
@@ -1700,7 +1700,7 @@ a[title="卜"]{display:none;}
 <script src="images/itorr.m.js"></script>
 <script>
 
-var nnw=function(d,c){var a=function(){var e=$.D.m("span"),j=["0","-68px"],f=0,i=-100,h=j.length,g,k=function(){if(f==h){f=0;i+=12;}if((i-200)>$("body").clientWidth){clearTimeout(g);$.D.d(e);return;}$.css(e,"background-position:"+j[f]+" 0;left:"+i+"px;");f++;g=setTimeout(k,120);};e.className="nnw";$.D.a(e);k();e.onmouseover=function(){clearTimeout(g);};e.onmouseout=function(){g=setTimeout(k,120);};},b=function(){var g=function(n,l,m){if(n.attachEvent){n["e"+l+m]=m;n[l+m]=function(){n["e"+l+m](window.event);};n.attachEvent("on"+l,n[l+m]);}else{n.addEventListener(l,m,false);}},k={},j=0,f=["38","38","40","40","37","39","37","39","66","65"],e=f.length,i=function(m){if(!h.bind){return;}var l=m.keyCode;switch(m.type){case"keydown":if(k[l]>0){return;}k[l]=1;if(l==f[j]){j++;if(j==e){a();j=0;}}else{if(l==f[0]){j=1;}else{j=0;}}break;case"keyup":k[l]=0;break;}},h={init:function(){g(window,"keydown",i);g(window,"keyup",i);},state:k,bind:true};return h;}();b.init();setInterval(a,2000);$.lcss("images/nnw.m.css");return a;}(window,document);
+var nnw=function(d,c){var a=function(){var e=$.D.m("span"),j=["0","-68px"],f=0,i=-100,h=j.length,g,k=function(){if(f==h){f=0;i+=12;}if((i-200)>$("body").clientWidth){clearTimeout(g);$.D.d(e);return;}$.css(e,"background-position:"+j[f]+" 0;left:"+i+"px;");f++;g=setTimeout(k,120);};e.className="nnw";$.D.a(e);k();e.onmouseover=function(){clearTimeout(g);};e.onmouseout=function(){g=setTimeout(k,120);};},b=function(){var g=function(n,l,m){if(n.attachEvent){n["e"+l+m]=m;n[l+m]=function(){n["e"+l+m](window.event);};n.attachEvent("on"+l,n[l+m]);}else{n.addEventListener(l,m,false);}},k={},j=0,f=["38","38","40","40","37","39","37","39","66","65"],e=f.length,i=function(m){if(!h.bind){return;}var l=m.keyCode;switch(m.type){case"keydown":if(k[l]>0){return;}k[l]=1;if(l==f[j]){j++;if(j==e){a();j=0;}}else{if(l==f[0]){j=1;}else{j=0;}}break;case"keyup":k[l]=0;break;}},h={init:function(){g(window,"keydown",i);g(window,"keyup",i);},state:k,bind:true};return h;}();b.init();setInterval(a,2000);return a;}(window,document);
 
 var htkt=function(){
 	$.j('http://api.hitokoto.us/rand?encode=jsc&fun={cb}',function(d){
