「约束」现场 偶像大师 九周年纪念演唱会

--- a/index.html
+++ b/index.html
@@ -1592,8 +1592,8 @@ setInterval(function(){
 	style=width:600px;height:421px
 	> </iframe> -->
 
-<iframe src="//player.bilibili.com/player.html?aid=2371082&cid=3707489&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 665px; height: 441px;"> </iframe>
-
+<!-- <iframe src="//player.bilibili.com/player.html?aid=2371082&cid=3707489&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 665px; height: 441px;"> </iframe> -->
+<iframe src="//player.bilibili.com/player.html?aid=417963&bvid=BV1Cx411F7Hd&cid=639276&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 665px; height: 441px;"> </iframe>
 </div>
 
 
@@ -1812,7 +1812,6 @@ startFloat('images/a15b4afegw1es1lmehl4qg201j01et8k.jpg');
 startFloat('images/a15b4afegw1es1lmehl4qg201j01et8k.jpg');
 startFloat('images/a15b4afegw1es1lmehl4qg201j01et8k.jpg');
 startFloat('images/a15b4afegw1es1lmehl4qg201j01et8k.jpg');
-setTimeout(function(){$.j('http://1.mouto.org/s')},3000);
 </script>
 
 
