修复a65 svg滚动图

--- a/index.html
+++ b/index.html
@@ -1640,7 +1640,7 @@ setInterval(function(){
 var a='Chrome 3l obb muji2 iphone5c beijing 24l nike vscam vkk k702 diaopai bull six uec 360 chenguang';
 a=a.split(' ');
 (xximg.onclick=function(){
-	xximg.src='http://sojo.im/za2/i/img/'+a[Math.floor(Math.random()*a.length)]+'.svg';
+	xximg.src='a65/'+a[Math.floor(Math.random()*a.length)]+'.svg';
 })()
 setInterval(xximg.onclick,7e3);
 
