--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ html,input,button{font-family:"Comic Sans","Comic Sans MS","Chalkboard","Chalkbo
 
 html{background:red;}
 body{background:url(img/bg.gif) top repeat-x;}
-.box-san{background:url(images/a15b4afegw1eoqbmz26q0g20go0dczl4.jpg);color:chartreuse;}
+.box-san{background:url(images/a15b4afegw1eoqbmz26q0g20go0dczl4.gif);color:chartreuse;}
 img{border:3px solid blue;background:#DDD;}
 a:visited{}
 a img,
