--- a/index.html
+++ b/index.html
@@ -1633,7 +1633,7 @@ setInterval(function(){
 }
 </style>
 <img id="xximg">
-<a class="moe123-link" href="http://moe123.com/?bakazhangyu" title="萌导航" target="新窗口">
+<a class="moe123-link" href="#http://moe123.com/?bakazhangyu" title="萌导航" target="新窗口">
 	<img src="images/a15b4afegw1eznaeefpx5j20qe0460v0.jpg" alt="萌导航">
 </a>
 <script>
