引用自 虾米音乐

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ marquee a{color:chartreuse;}
 #音乐封面图{
 	width:100%;
     transform: rotateX(1deg) rotateY(1deg) rotateZ(1deg) translate(-40px,-15px);
+    pointer-events: none;
 }
 #播放音乐{
 	font-size:1.4em;
@@ -100,6 +101,10 @@ marquee a{color:chartreuse;}
 	<audio id=播放器 controls></audio>
 	<button id=播放音乐>► / || 播放/暂停</button>
 	<button id=下一首>⇥ 下一首</button>
+    <blockquote>
+        来自虾米音乐网
+        <a href="#http://www.xiami.com/">http://www.xiami.com/</a>
+    </blockquote>
 </div>
 
 
