--- a/index.html
+++ b/index.html
@@ -1946,10 +1946,10 @@ $('body').onclick=function(e){
     
     const excludeNodeNames = [
         'script','style','xmp',
-        'input','textarea','select',
-        'pre','code',
-        'h1','h2', // 'h3','h4',
-        'b','strong',
+        // 'input','textarea','select',
+        // 'pre','code',
+        // 'h1','h2', // 'h3','h4',
+        // 'b','strong',
         'svg','embed',
         'img','audio','video',
         'canvas',
