--- a/index.html
+++ b/index.html
@@ -1535,12 +1535,20 @@ body{
 
 <p><img src="images/a15b4afegw1eoqbyaft4kg203d03amxx.jpg"></p>
 <ul class="nav">
-	<li><a href="http://itorr.sojo.im:1024/" class="code">项目列表</a></li>
+	<li>
+        <del href="#http://itorr.sojo.im:1024/" class="code">项目列表</del>
+    </li>
+	<li><a href="https://lab.magiconch.com" class="code">
+        <color>
+            项目列表
+            <i>(神奇海螺)</i>
+        </color>
+    </a></li>
 	<li><a href="//mouto.org/" class="me">博客</a></li>
 	<li><a href="//weibo.com/reiove" class="weibo">@卜卜口</a></li>
-	<li><a href="//vscam.co"><img src="images/a15b4afegw1eoqb7freulj201l01gjr5.jpg">VScam</a></li>
+	<li><a href="#//vscam.co"><img src="images/a15b4afegw1eoqb7freulj201l01gjr5.jpg">VScam</a></li>
 	<li><a href="http://itorr.sojo.im:1024/fm/" title="通常意义的电台"><img src="images/a15b4afegw1eoqb7c8a4pg202x01ewee.jpg">偷揉电台</a></li>
-	<li><s>	<a href="http://music.syouzyo.org" title="通常意义的播放器，很多专辑那种"><img src="a65/k702.svg"><h4 style="margin:0;">播放器<sub><big>专</big><i>辑</i>那种</sub><sup>自己用</sup></h4></s></li>
+	<li><s>	<a href="#http://music.syouzyo.org" title="通常意义的播放器，很多专辑那种"><img src="a65/k702.svg"><h4 style="margin:0;">播放器<sub><big>专</big><i>辑</i>那种</sub><sup>自己用</sup></h4></s></li>
 </ul>
 
 	<div id="hitokoto"></div>
