--- a/index.html
+++ b/index.html
@@ -1409,7 +1409,7 @@ fetch('https://lab.magiconch.com/api/hosts/unicom-host').then(r=>r.json()).then(
  -->
 </a>
 
-<div id="xianjing" style="position:absolute;top:230px;left:300px;height:250px;width:500px;border:4px ridge #DDD;overflow:auto;background:#FFF;">
+<div id="xianjing" style="position:absolute;top:230px;left:300px;height:250px;width:500px;border:4px ridge #DDD;overflow:scroll;background:#FFF;">
 	<img src="images/a15b4afegw1eu0w3zc98aj20hv0m2wl1.jpg" style="border:0;">	
 </div>
 <script>
