--- a/index.html
+++ b/index.html
@@ -1497,6 +1497,8 @@ ul.ds-comments{
  </div>
 
 
+ <embed src="flash.swf" style="width:400px;height:240px;border: 1px solid red;">
+
 <form class="search" action="#">
 	<input placeholder="sou'suo">
 	<button type="submit">搜索(Ctrl+Enter 暂时不可用OAQ<img src="images/a15b4afegw1eoqb7tmib7j203c034dfq.jpg">)</button>
