--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@ ul.ds-comments{
  </div>
 
 
- <embed src="flash.swf" style="width:400px;height:240px;border: 1px solid red;">
+ <embed src="flash.swf" style="width:400px;height:240px;border: 1px solid red;"> wmode="transparent"
 
 <form class="search" action="#">
 	<input placeholder="sou'suo">
