--- a/index.html
+++ b/index.html
@@ -1497,8 +1497,6 @@ ul.ds-comments{
  </div>
 
 
- <embed src="flash.swf" style="width:400px;height:240px;border: 1px solid red;"> wmode="transparent"
-
 <form class="search" action="#">
 	<input placeholder="sou'suo">
 	<button type="submit">搜索(Ctrl+Enter 暂时不可用OAQ<img src="images/a15b4afegw1eoqb7tmib7j203c034dfq.jpg">)</button>
@@ -1519,7 +1517,11 @@ u2b.play()}
 u2bloop.onclick=u2b.onended
 </script>
 <!-- <div style="position:absolute;top:200px;right:300px;pointer-events:none"><script src="https://count.2881.com/count/count.asp?id=59061&sx=1&ys=32"></script></div> -->
-<h1>王守义与哈士奇<img src="images/a15b4afegw1eoqb7s9uegg2064064q9l.jpg"></h1>
+<br>
+<h1 style="display: inline-block;">王守义与哈士奇<img src="images/a15b4afegw1eoqb7s9uegg2064064q9l.jpg"></h1>
+
+
+<embed src="flash.swf" style="width:400px;height:240px;border: 1px solid red;"> wmode="transparent"
 
 
 <style>
