--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,19 @@ xianjing.onclick=function(){
 	<li><a href="#http://luxun.pro/#sojo"><img src="images/a15b4afegw1f2p8i9fv64g204c04cgld.jpg" alt="鲁迅追番"></a></li>
 	<li><h2><img src="images/a15b4afegw1eoqbro7u8xg2013016glk.jpg">&nbsp;<font color="#FF0000">你</font><font color="#FF5A00">好</font><font color="#FFB400" style="font-size:1.3em;">世界</font><font color="#FFff00"> </font><font color="#A5ff00">，</font><font color="#4Bff00">你</font><font color="#00ff00">好</font><font color="#00ff5A"> </font><blink><font color="#00ffB4">世</font><font color="#00ffff">界</font><font color="#00B4ff">o</font><font color="#005Aff">ha</font><font color="#0000ff">ll</font><font color="#4B00ff">o</font><font color="#A500ff"> </font><font color="#FF00ff">wo</font><font color="#FF00B4">ld</font></blink></h2></li>
 	<li><a href=""><img src="images/a15b4afegw1eoqbt2izckg201e01e742.jpg"> 首页&lt;</a></li>
+    <style>
+        big svg{
 
+    border: 2px solid green;
+    background: #FFF;
+    fill:green;
+    padding: 4px;
+        }
+        a:hover big svg{
+            border:4px dotted blue;
+            fill: purple;
+        }
+    </style>
     <li>
         <a href="https://github.com/itorr/sojo">
             <big>
@@ -1435,7 +1447,9 @@ xianjing.onclick=function(){
                     <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
                 </svg>
                 <b>开源色区</b>
-                ：、、GayHub.Com/i7o2r/S0jo
+                <br>
+                <sub>http//：、、</sub>
+                GayHub.Com/<i>i7o2r/S0jo</i>
             </big>
         </a>
     </li>
