逼死前端狗

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0031)http://www.baidu.com/?cm=ZhewAnZaNNiyEbADeXiAsHou -->
 <meta charset="UTF-8">
+<title>逼死前端狗</title>
 <style>
 html,input,button{font-family:"Comic Sans","Comic Sans MS","Chalkboard","ChalkboardSE-Regular","Marker Felt","Purisa","URW Chancery L",cursive,楷体,sans-serif;}
 
@@ -1906,7 +1907,7 @@ var i = 0;
 
 function animateTitle() {
 	i >= message.length - 1 ? i = 0 : i++; 
-	document.title = message[i];
+	document.title = message[i] + ' - 逼死前端狗';
 	setTimeout(animateTitle, 200);	
 }
 
