--- a/index.html
+++ b/index.html
@@ -2006,6 +2006,9 @@ $('body').onclick=function(e){
 
 <a href="http://kiopkio.lofter.com/post/171785_ee7935ec">【素材】imas系列事务所/企划logo矢量重制集合</a>
 
+<!-- 图裂了! :> -->
+<h4>扫码查看活动详情</h4>
+<img src='404.jpg' alt='' style='width: 300px;height: 300px'>
 
 
 <script>
