feat(mojo): 成为魔法少女吧！

--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,16 @@ dds2();
 </script>
 <center><img src="images/a15b4afegw1eowovith46j208c08c3zs.jpg"></center>
 
+<section>
+    <svg width="1200" height="1200" style="stroke: #fff">
+        <circle cx="600" cy="600" r="540"></circle>
+        <circle cx="600" cy="600" r="470"></circle>
+        <path d="M600 100 L1033 850 L167 850 Z" fill="transparent"></path>
+        <path d="M167 350 L1033 350 L600 1100 Z" fill="transparent"></path>
+    </svg>
+    <strong>签订契约，成为魔法少女吧！</strong>
+</section>
+
 <img style="position:absolute;position:fixed;bottom:0;right:100px;" src="images/a15b4afegw1es1ln3oxzvg202803k75f.jpg">
 <script>
 
