修正引用图片地址错误

--- a/index.html
+++ b/index.html
@@ -1998,9 +1998,9 @@ $('body').onclick=function(e){
 
 
 <h4>你如果有什么问题想问，那我就要和你说了「xxx，不会百度么？」</h4>
-<a href="http://cnm.buhuibaidu.me">
+<a href="//lab.magiconch.com/buhuibaidu.me/">
 	<p>htpps:///CNM。BuhUuiBaidu。mE</p>
-	<img src="http://wx1.sinaimg.cn/large/4764ae2agy1fhjhmrwth1g210y0pcglt.gif" style="width: 400px;" referrerpolicy="no-referrer">
+	<img src="//ww1.sinaimg.cn/large/4764ae2agy1fhjhmrwth1g210y0pcglt.gif" style="width: 400px;" referrerpolicy="no-referrer">
 </a>
 
 
