--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>逼死前端狗</title>
 <style>
 html,input,button{font-family:"Comic Sans","Comic Sans MS","Chalkboard","ChalkboardSE-Regular","Marker Felt","Purisa","URW Chancery L",cursive,楷体,sans-serif;}
-
+	
 html{background:red;}
-body{background:url(img/bg.gif) top repeat-x;}
+body{background:url(img/bg.gif) top repeat-x;width: calc(100vw + 1px);}
 .box-san{background:url(images/a15b4afegw1eoqbmz26q0g20go0dczl4.gif);color:chartreuse;}
 img{border:3px solid blue;background:#DDD;}
 a:visited{}
